test/invalid/qstring_unfinished.d
//T error: qstring_unfinished.d:4:11
//T error: Unexpected end of file.

string s = q{ { plop }
